--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@ div.tab button.active {
 <p>Click on the buttons inside the tabbed menu:</p>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'London')"> Home </button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')"> Images </button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')"> Google Map </button>
 </div>
 
 <div id="London" class="tabcontent">
-  <h3>London</h3>
+  <h3> HOME </h3>
   <p>London is the capital city of England.</p>
 </div>
 
 <div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
+  <h3> IMAGE </h3>
   <p>Paris is the capital of France.</p> 
 </div>
 
 <div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
+  <h3> GOOGLE MAPS </h3>
   <p>Tokyo is the capital of Japan.</p>
 </div>
 
